--- a/thesis/sections/discussion.tex
+++ b/thesis/sections/discussion.tex
@@ -376,12 +376,12 @@ This discussion will be picked up, following up on this.
 In addition to these self-imposed goals, it was also decided in section \ref{sec:verify-spec} to adopt the four design goals that were initially introduced in \cite{Reid17}.
 These were defined to apply to high-level properties for specifications and list as follows:
 \begin{displaycquote}[pp.88:2-3]{Reid17}
-    The central design challenge we face is to create a set of properties that:
+    ``The central design challenge we face is to create a set of properties that:
     \begin{itemize}
         \item express the major guarantees that programmers depend on;
         \item are concise so that architects can easily review and remember the entire set of properties;
         \item are stable so that architectural extensions do not invalidate large numbers of rules;
-        \item and that describe the architecture differently from existing specification to reduce the risk of common-mode failure.
+        \item and that describe the architecture differently from existing specification to reduce the risk of common-mode failure.''
     \end{itemize}
 \end{displaycquote}
 
