--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -13,7 +13,7 @@ Formal verification of a system is the attempt to prove that it is free of error
 Thus, formal verification complements testing.
 The relation between these two approaches often is illustrated by a famous quote of Edsger Dijkstra:
 \begin{displaycquote}[p.6]{Dijkstra72}
-    Program testing can be used to show the presence of bugs, but never to show their absence!
+    ``Program testing can be used to show the presence of bugs, but never to show their absence!''
 \end{displaycquote}
 
 Whereas testing is a quick and efficient way of finding bugs in the development process of a system, formal verification is a more complex but complete (regarding the properties verified) process of proving the absence of bugs.
