thesis: Fix wrapping displaycquote in quotation marks; skip newline at the end of itemize/description blocks in quotes

--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -390,6 +390,7 @@ The ARM architecture defines three architecture \textit{profiles}:
 Here, the ARMv8-A profile will be put into focus.
 The \citetitle{Armv8} \cite{Armv8} introduces the ARM A-class architecture as a \gls{risc} architecture with three key properties:
 \begin{displaycquote}[p.A1-34]{Armv8}
+    \textelp{}
     \begin{itemize}
         \item A large uniform register file.
         \item A load/store architecture, where data-processing operations only operate on register contents, not directly on memory contents.
@@ -1280,6 +1281,7 @@ This combines the work of \citeauthor{Reid17} \cite{Reid17} and \citeauthor{Ferr
 This approach will be evaluated by applying it to a simplified version of the RISC-V \gls{isa}, MINRV8.
 We adopt the requirements to these properties from \cite{Reid17}, i.e. these properties should:
 \begin{displaycquote}[pp.88:2-3]{Reid17}
+    \textelp{}
     \begin{itemize}
         \item express the major guarantees that programmers depend on;
         \item \textelp{be} concise so that architects can easily review and remember the entire set of properties;
