thesis: Improvements due to proof-reading of my supervisor

--- a/thesis/appendix/counter-examples.tex
+++ b/thesis/appendix/counter-examples.tex
@@ -198,6 +198,7 @@ Again, a mysterious confidential word appears in register three which must have 
 \end{table}
 
 \subsection{Cache-Invalidation Mitigation}
+\label{sec:cache-inval-mit}
 
 Consider the counter-example to the cache-relate assumptions \smv{CLR_CACHE_ON_DECLASSIFICATION} depicted in table \ref{tbl:cex-no-leak-ccod}.
 It can be seen that it resulted in a trace where memory privileges are lowered but sensitive data remains in cache.
