--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -642,3 +642,24 @@
     url = {https://lwn.net/Articles/180820/},
     urldate = {2020-02-04}
 }
+
+@InProceedings{Irfan16,
+    author={A. {Irfan} and A. {Cimatti} and A. {Griggio} and M. {Roveri} and R. {Sebastiani}},
+    booktitle={2016 Design, Automation Test in Europe Conference Exhibition (DATE)},
+    title={Verilog2SMV: A tool for word-level verification},
+    year={2016},
+    pages={1156-1159},
+    ISSN={1558-1101},
+    month={March},
+}
+
+@InProceedings{Krieg14,
+    author={C. {Krieg} and M. {Rathmair} and F. {Schupfer}},
+    booktitle={2014 IEEE Intl Conf on High Performance Computing and Communications, 2014 IEEE 6th Intl Symp on Cyberspace Safety and Security, 2014 IEEE 11th Intl Conf on Embedded Software and Syst (HPCC,CSS,ICESS)},
+    title={A Process for the Detection of Design-Level Hardware Trojans Using Verification Methods},
+    year={2014},
+    pages={729-734},
+    doi={10.1109/HPCC.2014.112},
+    ISSN={null},
+    month={Aug},
+}
