--- a/thesis/sections/discussion.tex
+++ b/thesis/sections/discussion.tex
@@ -164,7 +164,7 @@ The implementation of the MINRV8 architecture abstracted from real-world archite
     This is not problematic because programs including jumps can be linearized; such programs \textit{are} considered by nuXmv.
 \end{enumerate}
 
-This leaves us with good reasons to assume that the set of programs nuXmv quantifies over when running proofs is sufficiently close to the set of \enquote{real} programs of the MINRV8 architecture including jumps and branches.
+Therefore, the set of programs nuXmv quantifies over when running proofs includes the set of \enquote{real} programs of the MINRV8 architecture, including jumps and branches, by abstracting from it.
 
 \subsection{Assumptions}
 
