thesis: Introduce architectures in background historically

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -663,3 +663,23 @@
     ISSN={null},
     month={Aug},
 }
+
+@Online{ArmHistory,
+    author = {Walshe, Ben},
+    title = {A Brief History of Arm: Part 1},
+    year = {2015},
+    month = {April},
+    url = {https://community.arm.com/developer/ip-products/processors/b/processors-ip-blog/posts/a-brief-history-of-arm-part-1},
+    organization = {Arm Ltd},
+    urldate = {2020-02-14}
+}
+
+@Online{ArmHistory,
+    author = {Walshe, Ben},
+    title = {A Brief History of Arm: Part 1},
+    year = {2015},
+    month = {April},
+    url = {https://community.arm.com/developer/ip-products/processors/b/processors-ip-blog/posts/a-brief-history-of-arm-part-1},
+    organization = {Arm Ltd},
+    urldate = {2020-02-14}
+}
