thesis: Small fixes

--- a/thesis/preface/acknowledgements.tex
+++ b/thesis/preface/acknowledgements.tex
@@ -5,10 +5,10 @@ I was fortunate to be able to continue the work he and I did during my internshi
 I am very grateful that even after my internship at Arm ended, he put his free time into my work such that I was able to write a thesis in the field of formal verification.
 Without his guidance, I would not have been able to write, not even start this thesis.
 
-Secondly, I want to thank Jörn Hoffmann of the department of Technische Informatik, who agreed to supervise me at the University of Leipzig.
+Secondly, I want to thank Jörn Hoffmann of the department of Technische Informatik, who agreed to supervise me at Leipzig University.
 Without having known me or having a direct affiliation with the topic of my thesis, he allowed me to write this thesis officially and gave guidance whenever I was not sure about the direction of my thesis.
 
-Also, I want to thank Prof. Dr. Andreas Maletti of the department of Algebraische und logische Grundlagen der Informatik.
+Also, I want to thank Prof. Dr. Andreas Maletti of the department of Algebraische und logische Grundlagen der Informatik at Leipzig University.
 When I was working on my thesis but did not yet have supervision by someone at my university, he helped me to keep motivated whenever I felt lost because of the physical distance to my unofficial supervisor.
 
 And last but not least, I want to thank my proofreader and friend Friedrich Schöne who not only read my thesis but also contributed towards it by friendship and exchange.
