--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -630,7 +630,7 @@
 }
 
 @InProceedings{Kocher2018spectre,
-    author = {Paul Kocher and Jann Horn and Anders Fogh and and Daniel Genkin and Daniel Gruss and Werner Haas and Mike Hamburg and Moritz Lipp and Stefan Mangard and Thomas Prescher and Michael Schwarz and Yuval Yarom},
+    author = {Paul Kocher and Jann Horn and Anders Fogh and Daniel Genkin and Daniel Gruss and Werner Haas and Mike Hamburg and Moritz Lipp and Stefan Mangard and Thomas Prescher and Michael Schwarz and Yuval Yarom},
     title = {Spectre Attacks: Exploiting Speculative Execution},
     booktitle = {40th IEEE Symposium on Security and Privacy (S\&P'19)},
     year = {2019},
